--- a/index.css
+++ b/index.css
@@ -239,10 +239,11 @@ width: 80%;
       background-size: cover;
       width: 100%;
       padding: 10rem 0;
+      clear: left;
   }  
   #foodlist-menu{
       background-color:white;
-      width:90%;
+      width:96%;
       margin:auto;
     
   }
@@ -250,10 +251,66 @@ width: 80%;
     display: flex;
     flex-direction: row;
     text-align: center;
-    justify-content: center;
+    justify-content: space-evenly;
+    padding: auto;
+    
+    margin: auto;
 
 }
 .footerimg{
     text-align: center;
     margin: auto;
 }
+.foodimages{
+    color:#F15A29 ;
+    font-size: 20px;
+}
+nav {
+    max-width: 100%;
+    padding: 10px 0; 
+    margin: 0 auto;
+    width: 100%;
+    
+   
+}
+nav>ul>li{
+    width: 150px;
+    display: inline-block;
+    justify-content: stretch;
+    position: relative;
+}
+nav>ul{
+    text-align: center;
+    
+}
+ nav>ul>li>a {
+     
+    padding: 20px;
+    text-transform: uppercase;
+    text-decoration: none;
+    display: inline;
+    color:black;
+    background-color:  rgba(110, 110, 110, 0.733);
+
+    
+    }
+    .nav-link {
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1),inset  0 0 1px rgba(255, 255, 255, 0.6);
+        background: white;
+        color:#F15A29;
+        }  
+        #drinks{
+            display: flex;
+            flex-direction: row;
+            height: 70%;
+            margin: auto;
+            display: inline;
+        }
+        .about-drinks{
+            clear: left;
+            float: left;
+        }
+        #drinksphoto{
+            display: flex;
+            flex-direction: row;
+        }
