--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+
 html{
     scroll-behavior: smooth;
     position: relative;
@@ -352,4 +353,356 @@ nav{
                 border: 20px solid white;
                 box-shadow: 1px 1px 5px #F15A29;
             }
+
+  @media only screen and (min-width: 350px){
+    #overlay{
+        position:static;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0; 
+        background-image: url(./backgrounds/landing.jpg);
+        background-repeat: no-repeat;
+        background-size:cover;
         
+    }
+    /* landing */
+    
+    #logo{
+        padding: auto;
+        justify-content: center;
+        text-align: center;
+        color: white;
+        margin: auto;
+        padding-top: 15px;
+        
+    }
+    #list{
+        
+        min-width: 300px;
+      border: 33px solid whitesmoke;
+      margin: auto;
+      text-align: center;
+      background-color: whitesmoke;
+      display: block;
+      
+      position:relative;
+      
+    }
+    #PT{
+    min-width: 300px;
+      border: 33px solid  #F15A29;  
+      margin: auto;
+      text-align: center;
+      background-color: #F15A29;
+      display: block;
+      position: relative;
+      
+    
+    }
+    #PT>p{
+        text-align: center;
+        margin: auto;
+        padding-top: 30px;
+        color: white;
+        font-family: sans-serif;
+        font-size: 24px;
+        
+    
+    }
+    
+    
+    #HappyHour{
+        
+        background-color: whitesmoke;
+        width: 30%;
+        height: 10%;
+    }
+    strong{
+        font-weight: 700px;
+    
+    }
+    .menu{
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        }
+        
+       
+     #breakfast{
+         color: white;
+         font-size: 30px;
+         text-align: center;
+         font-weight: 700;
+         width: 100%;
+         
+     }
+     .breakfast{
+         opacity: 0.5;
+        position: absolute;
+        top: 50%;
+        left: 40%;
+        transform: translate(-50%, -50%);
+    
+     }
+    
+    #lunch{
+        color: white;
+         font-size: 30px;
+         text-align: center;
+         font-weight: 700;
+    }
+    .lunch{
+        opacity: 0.5;
+        position: absolute;
+        top: 50%;
+        left: 63%;
+        transform: translate(-50%, -50%); 
+    }
+        
+     #dinner{
+        color: white;
+        font-size: 30px;
+        text-align: center; 
+        font-weight: 700;  
+     }
+     .dinner{
+        opacity: 0.5;
+        position: absolute;
+        top: 50%;
+        left: 88%;
+        transform: translate(-50%, -50%); 
+    }
+        
+    /* Fast food menu */
+    
+    .fastfoods{
+        
+        display: flex;
+        flex-direction: column;
+        position:relative;
+        width: 80%;
+        margin: auto;
+        box-sizing: content-box;
+        border: 20px solid white ;
+        box-shadow: 2px 2px 5px grey; 
+        
+    }
+    #fastfoodtxt{
+        text-align: left;
+        padding-left: 5em;
+      
+       
+    }
+    #fastfoodphoto{
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    padding-left: 1em;
+    }
+       
+    
+    #fastfoodphoto{
+        text-align: center;
+        justify-content: space-around;
+        width: 70%;
+        margin: auto;  
+    }
+    
+    /* Footer */
+    
+    #footer{
+        background-color: #F15A29;
+        text-align: center;
+        color: white;
+        font-size: 24px;
+        margin: auto;
+    }
+    #footerburger{
+        text-align: center;
+        margin: auto;
+        padding-top: 3em;
+        width: 100%  
+    }
+    .footerimg {
+        width: 100%;
+        height: 100%;
+    }
+    #subscribe{
+        background-image: url(./backgrounds/subscribe.jpg);
+        background-size: cover;
+        width: 100%;
+        padding: 10rem 0;
+       
+    }
+    /* Subscribe */
+    .subscribe {
+        box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
+        padding: 2% 3%;
+        height: auto;
+        width: 30%;
+        margin: auto;
+        font-family: 'Merienda One', cursive;
+        font-size: 100%;
+        text-transform: capitalize;
+        border: 0;
+        text-align: center;
+        background-color: white;
+        opacity: 0.5;
+        
+    }
+    button{
+        box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
+        padding: 2% 3%;
+        height: auto;
+        width: 20%;
+        margin: auto;
+        font-family:'Noto Sans HK', sans-serif;
+        font-size: 100%;
+        text-transform: capitalize;
+        border: 0;
+        text-align: center;
+        background-color: #F15A29;
+        justify-content: left;
+        }
+     .float{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;  
+            
+            
+        
+        }
+    #subscribe h3{
+        color: white;
+        text-align: center;
+        font-family:'Noto Sans HK', sans-serif;
+    }
+    /* customer */
+    #customer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    box-sizing: content-box;
+    border:1px solid grey;
+    box-shadow: 2px 2px 5px grey;
+    margin: 2em auto;
+    width: 80%;
+    }
+    
+    #happycustomer h2{
+        color:#F15A29;
+        font-size: 20px;
+        text-align: center;
+    }
+    #happycustomer h3{
+        text-align: center;
+    }
+    #happycustomer{
+        border-right: 1px solid black;
+        margin: auto;
+        text-align: center;
+        width: 100%;
+    }
+    #about{
+        width: 80%;
+        margin: 0.5em auto;
+        text-align: center;
+        padding-bottom: 1em;
+        
+    }
+    #about h2{
+        color:#F15A29;
+        }
+    
+        /* Food list menu */
+    
+      #foodlist-background{
+          background-image: url(./backgrounds/foodsBg.jpg);
+          background-repeat: no-repeat;
+          background-size: cover;
+          width: 100%;
+          padding: 10rem 0;
+          clear: left;
+      }  
+      #foodlist-menu{
+          background-color:white;
+          width:96%;
+          margin:auto;
+        
+      }
+    #foodimages{
+        display: flex;
+        flex-direction: row;
+        text-align: center;
+        justify-content: space-evenly;
+        padding: auto;
+        
+        margin: auto;
+    
+    }
+    .footerimg{
+        text-align: center;
+        margin: auto;
+    }
+    .foodimages{
+        color:#F15A29 ;
+        font-size: 20px;
+    }
+    nav{
+        margin-bottom: 1em;
+        
+    }
+    .nav-item{
+        background-color:  rgba(110, 110, 110, 0.733);
+        text-align: center;
+    }
+    .nav-link{
+        color: #000;
+        padding-left: 5.9em;
+        padding-right: 5.9em;
+        text-transform: uppercase;
+        
+    }
+    .nav-link:hover{
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1),inset  0 0 1px rgba(255, 255, 255, 0.6);
+        background: white;
+        color:#F15A29;
+    }
+    .active{
+        color:#F15A29;
+    } 
+    /* Drinks */
+    
+            #Drinks{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-around;
+                padding-bottom: 2em;
+                         
+            }
+            .about-drinks{
+                text-align: right;
+                float: left;
+            }
+            #drinksphoto{
+                display: flex;
+                flex-direction: row;
+                max-width: 50%;
+                margin: auto;
+                border: 7px solid whitesmoke ;
+                box-shadow: 1px 1px 5px grey;
+                }
+                .viewG{
+                    background-color:white;
+                    width: 70%;
+                    color:#F15A29;
+                    text-align: center;
+                    margin: auto;
+                    position: relative;
+                    border: 20px solid white;
+                    box-shadow: 1px 1px 5px #F15A29;
+                }
+  }  
